[ YC-000 ] Ensure that image preview in admin does not stretch small images

--- a/manager/jam-jsclient/src/main/typescript/src/client/css/yc-main.css
+++ b/manager/jam-jsclient/src/main/typescript/src/client/css/yc-main.css
@@ -527,7 +527,10 @@ table.dataTable thead .sorting:after {
 }
 
 .av-image-preview img {
-  width: 100%;
+  /*width: 100%;*/
+  max-width: 100%;
+  float: left;
+  height: auto;
 }
 
 .av-td-value img {
